--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,21 @@
 /*  Estilos Gerais*/
 * {
   box-sizing: border-box;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
 }
 body {
   font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  width: 100%;
+  max-width: 768px;
+  padding: 0px 10px
 }
 
 .btn {
@@ -32,25 +44,40 @@ p {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 14px;
   line-height: 20px;
+  animation: 1s subir forwards;
 }
 
 img {
   display: block;
   max-width: 100%;
+  animation: 1s subir forwards;
+  opacity: 0;
 }
 
 h1 {
+  animation: 1s subir forwards;
   transition: 1s;
   font-size: 36px;
+  opacity: 0;
 }
 
 h2 {
+  animation: 1s subir forwards;
   transition: 1s;
-  font-size: 24px
+  font-size: 24px;
+  opacity: 0;
 }
 
 h3, cite {
-  font-size: 20px
+  animation: 1s subir forwards;
+  font-size: 20px;
+  animation: 1s subir forwards;
+  opacity: 0;
+}
+
+blockquote {
+  animation: 1s subir forwards;
+  opacity: 0;
 }
 
 /*menu*/
@@ -64,6 +91,8 @@ header {
   justify-content: center;
   position: fixed;
   z-index: 10;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 header nav {
@@ -74,6 +103,8 @@ header nav {
   justify-content: center;
   flex: 1;
   height: 60px;
+  width: 100%;
+  max-width: 500px;
 }
 
 header nav .lista-menu {
@@ -84,6 +115,7 @@ header nav .lista-menu {
   flex: 1;
   height: 60px;
   margin: 0;
+  width: 100%;
 }
 
 header nav ul li {
@@ -123,19 +155,20 @@ header nav ul li:hover {
 }
 
 .introducao div {
+  padding: 0px 10px;
   margin-top: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-h1.titulo {
+.introducao h1.titulo {
   color: #fff;
   font-weight: bolder;
   letter-spacing: 5px;
   text-transform: uppercase;
   text-align: center;
-  
+  animation: 1s subir forwards;
 }
 
 .subtitulo {
@@ -143,6 +176,7 @@ h1.titulo {
   color: #fff;
   font-weight: bolder;
   letter-spacing: 5px;
+  animation: 1s subir forwards;
 }
 
 .textotitulo {
@@ -160,26 +194,39 @@ h1.titulo {
 .introducao div .btn {
   margin-top: 20px;
   color: rgb(36, 35, 35);
+  animation: 1s subir forwards;
 }
 
 /*depoimentos*/
 
+.depoimentos {
+  display: grid;
+  justify-content: center;
+  width: 100%;
+}
+
+.depoimentos .textotitulo{
+  animation-delay: 0.2s;
+}
 .depoimentos .subtitulo {
+  animation-delay: 0.2s;
   color: rgb(36, 35, 35);
   text-transform: uppercase;
   margin-top: 20px;
+  animation-delay: 0.2s;
 }
 .depoimento {
   transition: 1s;
   display: flex;
   align-items: center;
   flex-direction: column;
+  animation-delay: 0.2s;
 }
 
 .depoimentos p {
   color: rgb(51, 51, 51);
   letter-spacing: 1px;
-  margin-top: 15px;
+  margin-top: 10px;
 }
 
 .depoimento .avatar {
@@ -208,7 +255,7 @@ h1.titulo {
   width: 200px;
   height: 3px;
   background-color: #000;
-  margin: 10px auto 14px auto;
+  margin: 5px auto 5px auto;
 }
 
 .depoimento blockquote:after {
@@ -217,7 +264,8 @@ h1.titulo {
   width: 200px;
   height: 3px;
   background-color: #000;
-  margin: 10px auto 14px auto;
+  margin: 5px auto 25px auto;
+
 }
 
 /*portfolio*/
@@ -228,10 +276,10 @@ h1.titulo {
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition: 1s;
 }
 
 .portfolio .subtitulo {
+  animation-delay: 0.4s;
   transition: 1s;
   color: white;
   text-transform: uppercase;
@@ -244,6 +292,7 @@ h1.titulo {
   width: 100%;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 10px;
+  animation-delay: 0.4s;
 }
 
 .portfolio  .container .amostra .item3{
@@ -259,6 +308,7 @@ h1.titulo {
 .amostra .img-portfolio img{
   transition: 1s;
   border-radius: 15px;
+  width: 100%;
 }
 .portfolio .text-portfolio {
   transition: 1s;
@@ -274,7 +324,8 @@ h1.titulo {
   align-items: center;
   justify-content: center;
   margin: 20px 0;
-  
+  animation-delay: 0.4s;
+  animation: 1s subir forwards;
 }
 
 footer {
@@ -292,6 +343,13 @@ footer .redesocial {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
+  animation-delay: 0.6s;
+  animation: 1s subir forwards;
+}
+
+footer b {
+  animation-delay: 0.6;
+  animation: 1s subir forwards;
 }
 
 .redesocial img {
@@ -326,11 +384,9 @@ footer .redesocial {
   h3 {
     font-size: 14px;
   }
-
-
-
+  
   .depoimento .avatar {
-    margin-top: 20px;
+    margin-top: 5px;
     width: 150px;
     height: 150px;
     border-radius: 100%;
@@ -356,6 +412,11 @@ footer .redesocial {
   }
 }
 
+@media only screen and (max-width: 350px) {
+  li {
+    font-size: 12px;
+  }
+}
 
                                                                                                                                                                                                                                                                                                                                                                                           
 
