--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none;
 }
+
+*:focus {
+  outline: 0;
+}
 body {
   font-family: 'Roboto', sans-serif;
 }
