corrigindo erros da validaçao

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,6 @@
 /*  Estilos Gerais*/
 * {
   box-sizing: border-box;
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none;
 }
 
@@ -354,7 +349,7 @@ footer .redesocial {
 }
 
 footer b {
-  animation-delay: 0.6;
+  animation-delay: 0.6s;
   animation: 1s subir forwards;
 }
 
