--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,8 @@ footer b {
   height: 450px;
   background: url('../assets/logo.jpg') no-repeat;
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
+  
   background-attachment: fixed;
   display: flex;
   justify-content: center;
@@ -438,7 +439,8 @@ footer b {
   }
 }
 
-@media only screen and (max-width: 350px) {
+@media only screen and (max-width: 450px) {
+
   li {
     font-size: 12px;
   }
